--- a/index.html
+++ b/index.html
@@ -5,42 +5,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="Styles/styles.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
 
 <body>
-<header class="header">
-    <a href="#home" class="logo">Nethmi
-        <span>isurika</span>
-    </a>
-    <i class='bx bx-menu' id="menu-icon"></i>
+    <header class="header">
+        <a href="#home" class="logo">Nethmi
+            <span>isurika</span>
+        </a>
+        <i class='bx bx-menu' id="menu-icon"></i>
 
-    <nav class="navbar">
-        <a href="#home" class="active">Home</a>
-        <a href="#about" class="about">About</a>
-        <a href="#services" class="services">Services</a>
-        <a href="#portfolio" class="portfolio">Portfolio</a>
-        <a href="#contact" class="contact">Contact</a>
-    </nav>
-   
-</header>
+        <nav class="navbar">
+            <a href="#home" class="active">Home</a>
+            <a href="#about" class="about">About</a>
+            <a href="#services" class="services">Services</a>
+            <a href="#portfolio" class="portfolio">Portfolio</a>
+            <a href="#contact" class="contact">Contact</a>
+        </nav>
+    </header>
+        <section class="home" id="home">
+            <div class="home-content">
+                <h1>Hi,It's <span>Nethmi</span></h1>
+                <h3 class="text-animaion"><span>I'm a</span></h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis voluptatibus itaque
+                    similique libero dolore perferendis voluptates? Quo eaque tempora voluptatum explicabo
+                    atque, odio doloribus natus corrupti rerum, non aut perspiciatis.</p>
+            </div>
+
+            <div class="social-icons">
+                <a href="#"><i class='bx bxl-linkedin'></i></a>
+                <a href="#"><i class='bx bxl-github'></i></a> 
+                <a href="#"><i class='bx bxs-envelope'></i></a>
+            </div>
+
+            <div class="btn btn-group">
+                <a href="#" class="btn">Hire</a>
+                <a href="#contact" class="btn">Contact</a>
+            </div>
+        </div>
+            <div class="home-img">
+                <img src="img/my official.png" alt="">
+            </div>
+        </section>
+  
 
 
 
     <script src="Js/app.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"></script> -->
 </body>
 
 </html>
