project page impelementations

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="#home" class="active">Home</a>
             <a href="#education" class="education">Education</a>
             <a href="#services" class="services">Services</a>
-            <a href="#portfolio" class="portfolio">Portfolio</a>
+            <a href="#projects" class="projects">Portfolio</a>
             <a href="#contact" class="contact">Contact</a>
         </nav>
     </header>
@@ -173,6 +173,73 @@
         </div>
     </section>
 
+    <section class="projects" id="projects">
+        <div class="project-box">
+            <h2 class="heading">Projects</h2>
+            <div class="wrapper">
+                <div class="project-item">
+                    <img src="img/Project1.png" alt="project1">
+                    <h2>Project 1</h2>
+                    <div class="rating">
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur voluptatem praesentium
+                        explicabo ut perferendis porro. Vero praesentium harum eos in vitae quam ex? Placeat eius fugiat
+                        ea recusandae quasi voluptatum!</p>
+                </div>
+
+                <div class="project-item">
+                    <img src="img/Project2.png" alt="project1">
+                    <h2>Project 2</h2>
+                    <div class="rating">
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur voluptatem praesentium
+                        explicabo ut perferendis porro. Vero praesentium harum eos in vitae quam ex? Placeat eius fugiat
+                        ea recusandae quasi voluptatum!</p>
+                </div>
+
+                <div class="project-item">
+                    <img src="img/Project3.png" alt="project1">
+                    <h2>Project 3</h2>
+                    <div class="rating">
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur voluptatem praesentium
+                        explicabo ut perferendis porro. Vero praesentium harum eos in vitae quam ex? Placeat eius fugiat
+                        ea recusandae quasi voluptatum!</p>
+                </div>
+
+                <div class="project-item">
+                    <img src="img/Project4.png" alt="project1">
+                    <h2>Project 4</h2>
+                    <div class="rating">
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur voluptatem praesentium
+                        explicabo ut perferendis porro. Vero praesentium harum eos in vitae quam ex? Placeat eius fugiat
+                        ea recusandae quasi voluptatum!</p>
+                </div>
+            </div>
+        </div>
+
+    </section>
     <script src="Js/app.js"></script>
 </body>
 
